--- a/style.css
+++ b/style.css
@@ -53,15 +53,11 @@ img{
     margin-top: 10px;
 }
 
-/* .hangman-image-div{
-    border: solid black;
-    position: relative;
-    display: flex;
-    justify-content:center;
-    width: 50%;
-    height: 25rem;
-    margin: 2rem;
-} */
+.round-div{
+  margin-top: 10px;
+  margin-left: 350px; 
+}
+
 
 
 
@@ -98,6 +94,10 @@ img{
 
 .reset:hover{
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.reset{
+  display: none;
 }
 
 
@@ -140,7 +140,7 @@ img{
   border-color: #555 transparent transparent transparent;
 }
 
-#incorrect_guess_no{
+#incorrect_guess_no, #round_no{
   color: white;
   font-size: 20px;
 }
