--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ img{
 h4{
   color:white;
   font-size: 20px;
+  
 }
 
 .list-div{
@@ -218,7 +219,7 @@ li{
 }
 
 .keybutton:hover{
-  background-color: green;
+  background-color: greenyellow;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
@@ -275,6 +276,7 @@ li{
     border-bottom: 3px solid;
     font-size: 25px;
     margin-bottom: 20px;
+    font-family: customfont;
 }
 
 .hint-display-div{
@@ -318,6 +320,7 @@ li{
   margin-top: 2em;
   color: white;
   font-family: customfont;
+  text-decoration: underline;
 }
 
 
